# proxima

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  proxima-cli  pyproject.toml  tsconfig.json
.claude/: settings.local.json
.claude/agents/: codex-code-checker.md  project-runner.md  ralph-loop.md
proxima/: __init__.py  lifecycle.py  logging.py  main.py  services.py  settings.py
proxima/bot/: __init__.py  factory.py  middlewares.py  router.py
proxima/claude/: __init__.py  limit_keeper.py  permission_handler.py  query_runner.py  sdk.py  session_manager.py  session_watchdog.py  stream_renderer.py
proxima/cli/: __init__.py  db.py  setup.py  tool.py
proxima/commands/: storage.py
proxima/db/: engine.py  migrate.py  models.py
proxima/telegram/: __init__.py  keyboards.py  message_sender.py
proxima/utils/: markdown_to_html.py  queue.py
proxima/voice/: __init__.py  ffmpeg.py  transcribe.py
src/: config.ts  index.ts
src/bot/: bot.ts  context.ts
src/claude/: permission-handler.ts  query-runner.ts  session-manager.ts  stream-renderer.ts  types.ts
src/db/: client.ts  migrate.ts  schema.ts
tests/: keyboard-builder.test.ts  message-sender.test.ts  permission-handler.test.ts  query-runner.test.ts  queue.test.ts  stream-renderer.test.ts
tests_py/: test_cli_tool.py  test_command_storage.py  test_markdown_to_html.py  test_message_sender.py  test_permission_handler.py  test_query_runner.py  test_queue.py  test_rate_limit_retry.py  test_session_manager.py  test_session_watchdog.py  test_settings.py  test_sync_projects.py  test_update.py
(+32 files in other folders)
